--- a/.github/workflows/frontend-CICD.yml
+++ b/.github/workflows/frontend-CICD.yml
@@ -1,21 +1,44 @@
-name: Upload website to S3
+name: Uploade website to AWS S3
 
 on:
-    push:
-        branches:
-            - main  
+  push:
+    branches:
+      - main
 
 jobs:
-    deploy:
-        runs-on: ubuntu-latest
-        steps:
-        - uses: actions/checkout@master 
-        - uses: jakejarvis/s3-sync-action@master  
-          with:
-              args: --acl private --follow-symlinks --delete 
-          env:
-              AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}  
-              AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-              AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-              AWS_REGION: 'us-east-1'
-              SOURCE_DIR: 'website'
+  deploy:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '20.11.0'
+
+      - name: Install dependencies
+        run: npm install
+
+      - name: Build project
+        run: npm run build
+
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v2
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-1
+
+      - name: Sync files to S3
+        run: |
+          aws s3 sync ./build s3://tgifitness-bucket --delete
+        env:
+          NODE_ENV: production
+
+      - name: Invalidate CloudFront cache
+        run: |
+          aws cloudfront create-invalidation --distribution-id E1VZN2G43PJZ19 --paths "/*"
+        env:
+          NODE_ENV: production
