--- a/.github/workflows/frontend-CICD.yml
+++ b/.github/workflows/frontend-CICD.yml
@@ -19,10 +19,15 @@ jobs:
           node-version: '20.11.0'
 
       - name: Install dependencies
-        run: npm install
+        run: |
+            cd frontend
+            npm install
+
 
       - name: Build project
-        run: npm run build
+        run: |
+            cd frontend
+            npm run build
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v2
