make front secret, region var

--- a/.github/workflows/frontend-CICD.yml
+++ b/.github/workflows/frontend-CICD.yml
@@ -34,16 +34,16 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-east-1
+          aws-region: ${{vars.AWS_REGION}} #us-east-1
 
       - name: Sync files to S3
         run: |
-          aws s3 sync frontend/build s3://tgifitness-bucket --delete
+          aws s3 sync frontend/build s3://${{secrets.AWS_S3_BUCKET}} --delete
         env:
           NODE_ENV: production
 
       - name: Invalidate CloudFront cache
         run: |
-          aws cloudfront create-invalidation --distribution-id E1VZN2G43PJZ19 --paths "/*"
+          aws cloudfront create-invalidation --distribution-id ${{secrets.AWS_CLOUDFRONT_DISTRIBUTION}} --paths "/*"
         env:
           NODE_ENV: production
