--- a/.github/workflows/frontend-CICD.yml
+++ b/.github/workflows/frontend-CICD.yml
@@ -44,6 +44,6 @@ jobs:
 
       - name: Invalidate CloudFront cache
         run: |
-          aws cloudfront create-invalidation --distribution-id E1VZN2G43PJZ19 --paths "/*"
+          aws cloudfront create-invalidation --distribution-id ${{ secrets.AWS_CLOUDFRONT_DISTRIBUTION_ID }} --paths "/*"
         env:
           NODE_ENV: production
